--- a/intro.ipynb
+++ b/intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOu1N3dMhtlIlhmU3Y4ycG",
+      "authorship_tag": "ABX9TyPWqn7cuw0AN2RgICqFoGrU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,170 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Xedc93yI49NA",
-        "outputId": "e11f23e8-521a-4f10-f568-0281f4a42170"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (1.23.5)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (1.5.3)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (3.7.1)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (1.2.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2023.4)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.2.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (4.47.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.4.5)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (23.2)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (9.4.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (3.1.1)\n",
-            "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.11.4)\n",
-            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.3.2)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (3.2.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
-          ]
-        }
-      ],
-      "source": [
-        "pip install numpy pandas matplotlib scikit-learn\n"
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.datasets import load_boston\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear regression import LinearRegression\n",
-        "from sklearn.metrics import mean_squared_error, r2_score\n"
+        "import pandas as pd\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 143
-        },
-        "id": "A2CpLdu-5Ay0",
-        "outputId": "0a11f176-335f-44bf-d09e-a7a6149a5f4c"
+        "id": "A2CpLdu-5Ay0"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-2-19cfa426f2d6>, line 6)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-19cfa426f2d6>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    from sklearn.linear regression import LinearRegression\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Load the dataset\n",
-        "boston_dataset = load_boston()\n",
-        "data = pd.DataFrame(boston_dataset.data, columns=boston_dataset.feature_names)\n",
-        "target = pd.DataFrame(boston_dataset.target, columns=[\"MEDV\"])\n",
-        "\n",
-        "# Add target variable to the data\n",
-        "data['MEDV'] = target\n"
-      ],
-      "metadata": {
-        "id": "lQxwOJTa5FW_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Display the first few rows of the dataframe\n",
-        "print(data.head())\n",
-        "\n",
-        "# Plotting the distribution of target variable\n",
-        "plt.hist(data['MEDV'], bins=30)\n",
-        "plt.xlabel('Median Value of Owner-Occupied Homes in $1000')\n",
-        "plt.ylabel('Frequency')\n",
-        "plt.show()\n"
-      ],
-      "metadata": {
-        "id": "h98s4w7L5GeY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X = data.drop('MEDV', axis=1)\n",
-        "y = data['MEDV']\n",
-        "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
-      ],
-      "metadata": {
-        "id": "w8zAbcp65I_D"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Create a linear regression model\n",
-        "model = LinearRegression()\n",
-        "\n",
-        "# Train the model\n",
-        "model.fit(X_train, y_train)\n"
-      ],
-      "metadata": {
-        "id": "4rHb8mch5LMe"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Predicting the target values of the test set\n",
-        "y_pred = model.predict(X_test)\n",
-        "\n",
-        "# Evaluating the model\n",
-        "mse = mean_squared_error(y_test, y_pred)\n",
-        "r2 = r2_score(y_test, y_pred)\n",
-        "\n",
-        "print(f\"Mean Squared Error: {mse}\")\n",
-        "print(f\"R^2 Score: {r2}\")\n"
-      ],
-      "metadata": {
-        "id": "4nKofW_I5N0e"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "plt.scatter(y_test, y_pred)\n",
-        "plt.xlabel('Actual Prices')\n",
-        "plt.ylabel('Predicted Prices')\n",
-        "plt.title('Actual Prices vs Predicted Prices')\n",
-        "plt.show()\n"
-      ],
-      "metadata": {
-        "id": "WAk52O5r5QPn"
-      },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     }
   ]
