--- a/DecisionTree.ipynb
+++ b/DecisionTree.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCzcLbqkij2gUrRPLOPDJY",
+      "authorship_tag": "ABX9TyPlNeioTVQxSxzAMhXeoAHY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,27 +34,10 @@
       },
       "outputs": [],
       "source": [
+        "import pandas as pd\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
-        "\n",
-        "# Initialize label encoders for each categorical column\n",
-        "le_edadcat = LabelEncoder()\n",
-        "le_genero = LabelEncoder()\n",
-        "le_ecivil = LabelEncoder()\n",
-        "le_activo = LabelEncoder()\n",
-        "\n",
-        "# Apply the encoders to the columns\n",
-        "cereal_data['edadcat'] = le_edadcat.fit_transform(cereal_data['edadcat'])\n",
-        "cereal_data['genero'] = le_genero.fit_transform(cereal_data['genero'])\n",
-        "cereal_data['ecivil'] = le_ecivil.fit_transform(cereal_data['ecivil'])\n",
-        "cereal_data['activo'] = le_activo.fit_transform(cereal_data['activo'])\n",
-        "\n",
-        "# Assuming 'desayuno' is the target\n",
-        "y = cereal_data['desayuno']\n",
-        "X = cereal_data.drop('desayuno', axis=1)\n",
-        "\n",
-        "# Split the data into training and testing sets\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+        "from sklearn.metrics import accuracy_score\n"
       ]
     }
   ]
